infrastructure/istio/gateway.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: istio-gateway
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-path: /healthz/ready
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP

      # AWS Certificate Manager certificate's ARN
      #alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:eu-west-3:***:certificate/fcaa9fd2-1b55-48d7-92f2-e829f7bafafd"
    # open ports 80 and 443
    #alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
      # redirect all HTTP to HTTPS
    # alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    # ExternalDNS settings: https://rtfm.co.ua/en/kubernetes-update-aws-route53-dns-from-an-ingress/
    #external-dns.alpha.kubernetes.io/hostname: "istio-test-alb.example.com"

spec:
  rules:
    - http:
        paths:
          #          - path: /*
          #            backend:
          #              serviceName: ssl-redirect
          #              servicePort: use-annotation
          - path: /healthz/ready
            pathType: Prefix
            backend:
              service:
                name: istio-gateway
                port:
                  number: 15021
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-gateway
                port:
                  number: 80

#          - backend:
#              service:
#                name: istio-ingressgateway
#                port:
#                  number: 443
#            path: /
#            pathType: Prefix
